DndCreatureCatalog_letterItem: fix 1st column gap

--- a/src/components/DndCreatureCatalog/DndCreatureCatalogStyles.less
+++ b/src/components/DndCreatureCatalog/DndCreatureCatalogStyles.less
@@ -60,6 +60,7 @@
 
 .DndCreatureCatalog_letterItem {
     list-style-type: none;
+    margin-top: 0;
 }
 
 .DndCreatureCatalog_input {
